--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-# Dependencies - Ignorar TODA la carpeta node_modules
+# Dependencies
 node_modules/
-**/node_modules/
-node_modules
-/node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -33,6 +30,7 @@ coverage/
 .nyc_output
 
 # Dependency directories
+node_modules/
 jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
