--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint \"src/**/*.{ts,tsx}\" --ignore-pattern \"scripts/**\"",
+    "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix && echo ✅ Lint completado sin errores!",
+    "generate-manual": "node scripts/generate-manual.js"
   },
   "eslintConfig": {
     "extends": [
@@ -33,5 +36,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
+    "eslint": "^8.42.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "puppeteer": "^24.14.0"
   }
-} 
+}
