--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-router-dom": "^5.3.3",
+    "dexie": "^4.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.7.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5"
   },
@@ -19,6 +22,7 @@
     "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix && echo ✅ Lint completado sin errores!",
     "generate-manual": "node scripts/generate-manual.js",
     "generate-modalidades-doc": "node scripts/generate-modalidades-doc.js",
+    "generate-admin-manual": "node scripts/generate-admin-manual.js",
     "generate-all-docs": "node scripts/generate-all-docs.js"
   },
   "eslintConfig": {
