--- a/package.json
+++ b/package.json
@@ -6,18 +6,25 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
-    "dexie": "^4.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "express": "^4.18.2",
+    "sqlite3": "^5.1.6",
+    "cors": "^2.8.5",
+    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.17",
+    "axios": "^1.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "server": "node backend/server.js",
+    "dev": "concurrently \"npm run server\" \"npm start\"",
     "lint": "eslint \"src/**/*.{ts,tsx}\" --ignore-pattern \"scripts/**\"",
     "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix && echo ✅ Lint completado sin errores!",
     "generate-manual": "node scripts/generate-manual.js",
@@ -31,6 +38,7 @@
       "react-app/jest"
     ]
   },
+  "proxy": "http://localhost:3001",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -49,6 +57,7 @@
     "eslint": "^8.42.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "puppeteer": "^24.14.0"
+    "puppeteer": "^24.14.0",
+    "concurrently": "^7.6.0"
   }
 }
