--- a/deploy/nginx.conf.template
+++ b/deploy/nginx.conf.template
@@ -6,36 +6,8 @@ server {
     access_log /var/log/nginx/__APP_NAME___access.log;
     error_log /var/log/nginx/__APP_NAME___error.log;
 
-    # Archivos estáticos de React (build/static/)
-    location /static/ {
-        alias __APP_DIR__/build/static/;
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-        gzip_static on;
-    }
-
-    # Manifest y service worker
-    location ~* \.(manifest|sw)\.js$ {
-        root __APP_DIR__/build;
-        expires 1d;
-        add_header Cache-Control "public, must-revalidate";
-    }
-
-    # Archivos de assets (imágenes, fuentes, etc.)
-    location ~* \.(ico|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot|css|js)$ {
-        root __APP_DIR__/build;
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-    }
-
-    # Configuración principal para React SPA
+    # Configuración de proxy
     location / {
-        # Intentar servir archivos estáticos primero, luego proxy
-        try_files $uri $uri/ @react_app;
-    }
-
-    # Proxy para la aplicación React
-    location @react_app {
         proxy_pass http://localhost:__SERVICE_PORT__;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -50,6 +22,30 @@ server {
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
+    }
+
+    # Archivos estáticos optimizados
+    location /static/ {
+        alias __APP_DIR__/build/static/;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        
+        # Compresión específica para estáticos
+        gzip_static on;
+    }
+
+    # Manifest y archivos de service worker
+    location ~* \.(manifest|sw)\.js$ {
+        alias __APP_DIR__/build/;
+        expires 1d;
+        add_header Cache-Control "public, must-revalidate";
+    }
+
+    # Favicons e iconos
+    location ~* \.(ico|png|jpg|jpeg|gif|svg)$ {
+        alias __APP_DIR__/build/;
+        expires 30d;
+        add_header Cache-Control "public, immutable";
     }
 
     # Configuración de seguridad
@@ -79,4 +75,27 @@ server {
 
     # Limitar tamaño de subida
     client_max_body_size 10M;
+
+    # Configuración para SPA (Single Page Application)
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+
+    # Manejar rutas de React Router
+    location / {
+        try_files $uri $uri/ @fallback;
+    }
+
+    location @fallback {
+        proxy_pass http://localhost:__SERVICE_PORT__;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+    }
 } 
