--- a/package.json
+++ b/package.json
@@ -3,19 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
-    "axios": "^1.6.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "dexie": "^4.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
-    "sqlite3": "^5.1.6",
     "typescript": "^4.9.5"
   },
   "scripts": {
@@ -23,8 +18,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "node backend/server.js",
-    "dev": "concurrently \"npm run server\" \"npm start\"",
     "lint": "eslint \"src/**/*.{ts,tsx}\" --ignore-pattern \"scripts/**\"",
     "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix && echo ✅ Lint completado sin errores!",
     "generate-manual": "node scripts/generate-manual.js",
@@ -38,7 +31,6 @@
       "react-app/jest"
     ]
   },
-  "proxy": "http://localhost:3001",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -54,7 +46,6 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
-    "concurrently": "^7.6.0",
     "eslint": "^8.42.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
