--- a/deploy/nginx.conf.template
+++ b/deploy/nginx.conf.template
@@ -6,17 +6,9 @@ server {
     access_log /var/log/nginx/__APP_NAME___access.log;
     error_log /var/log/nginx/__APP_NAME___error.log;
 
-    # Configuración de proxy
+    # Configuración de proxy y manejo de rutas de React Router
     location / {
-        proxy_pass http://localhost:__SERVICE_PORT__;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
+        try_files $uri $uri/ @fallback;
         
         # Timeouts
         proxy_connect_timeout 60s;
@@ -82,11 +74,7 @@ server {
         add_header Cache-Control "public, immutable";
     }
 
-    # Manejar rutas de React Router
-    location / {
-        try_files $uri $uri/ @fallback;
-    }
-
+    # Fallback para React Router
     location @fallback {
         proxy_pass http://localhost:__SERVICE_PORT__;
         proxy_http_version 1.1;
