--- a/deploy/nginx.conf.template
+++ b/deploy/nginx.conf.template
@@ -6,9 +6,22 @@ server {
     access_log /var/log/nginx/__APP_NAME___access.log;
     error_log /var/log/nginx/__APP_NAME___error.log;
 
+    root __APP_DIR__/build;
+    index index.html;
+
     # Configuración de proxy y manejo de rutas de React Router
     location / {
-        try_files $uri $uri/ @fallback;
+        try_files $uri $uri/ /index.html;
+        
+        # Configuración de proxy
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
         
         # Timeouts
         proxy_connect_timeout 60s;
@@ -18,7 +31,6 @@ server {
 
     # Archivos estáticos optimizados
     location /static/ {
-        alias __APP_DIR__/build/static/;
         expires 1y;
         add_header Cache-Control "public, immutable";
         
@@ -28,14 +40,12 @@ server {
 
     # Manifest y archivos de service worker
     location ~* \.(manifest|sw)\.js$ {
-        alias __APP_DIR__/build/;
         expires 1d;
         add_header Cache-Control "public, must-revalidate";
     }
 
     # Favicons e iconos
     location ~* \.(ico|png|jpg|jpeg|gif|svg)$ {
-        alias __APP_DIR__/build/;
         expires 30d;
         add_header Cache-Control "public, immutable";
     }
@@ -82,18 +92,5 @@ server {
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
-    }
-
-    # Fallback para React Router
-    location @fallback {
-        proxy_pass http://localhost:__SERVICE_PORT__;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
     }
 } 
