--- a/package.json
+++ b/package.json
@@ -23,7 +23,14 @@
     "generate-manual": "node scripts/generate-manual.js",
     "generate-modalidades-doc": "node scripts/generate-modalidades-doc.js",
     "generate-admin-manual": "node scripts/generate-admin-manual.js",
-    "generate-all-docs": "node scripts/generate-all-docs.js"
+    "generate-all-docs": "node scripts/generate-all-docs.js",
+    "convert-data": "node scripts/convert-psicologos-data.js",
+    "backend:install": "cd backend && npm install",
+    "backend:migrate": "npm run convert-data && cd backend && npm run migrate",
+    "backend:start": "cd backend && npm start",
+    "backend:dev": "cd backend && npm run dev",
+    "dev": "concurrently \"npm run backend:dev\" \"npm start\"",
+    "setup": "npm install && npm run backend:install && npm run backend:migrate"
   },
   "eslintConfig": {
     "extends": [
@@ -46,6 +53,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
+    "concurrently": "^8.2.2",
     "eslint": "^8.42.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
