--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "dexie": "^4.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
