--- a/deploy/nginx.conf.template
+++ b/deploy/nginx.conf.template
@@ -81,7 +81,7 @@ server {
         style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
         font-src 'self' https://fonts.gstatic.com data:;
         img-src 'self' data: https: blob:;
-        connect-src 'self' https://api.global-deer.com;
+        connect-src 'self';
         frame-ancestors 'none';
         base-uri 'self';
         form-action 'self';
